# exercises

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.devcontainer/: Dockerfile  Dockerfile.base  Makefile  dependencies-apt.txt  devcontainer.json  requirements.txt
.github/workflows/: stamp-badge.yml
docs/: 00-preliminaries.md  01-helloworld.md  02-graphsearch.md  03-informedgraphsearch.md  04-dynamicprogramming.md  05-dubinspath.md  05-geometry.md  06-collision.md  06-collisionchecking.md  07-optimization-clean.md  07-optimization.md  07-optimizationmilp.md  08-driving_games.md  08-final22.md  09-pdm4arocket_explorer.md  09-rocket.md  10-final21.md  10-robot_runners.md  11-pdm4ar_space_agency.md  11-spaceship.md  12-highway_driving.md  13-???.md  13-satellite_docking.md  14-multiagent_collection.md  ??-optimizationmilp.md  Gemfile  _config.yml  index.md  xx-dubinspath.md  xx-optimizationmilp.md
docs/_layouts/: default.html
notebooks/: GeometryPoses_tutorial.ipynb  R2301-transition_system.ipynb  TransitionSystem.ipynb  geometry-poses_tutorial.ipynb
src/pdm4ar/: __init__.py  available_exercises.py  main.py
src/pdm4ar/exercises/: __init__.py
src/pdm4ar/exercises/ex01/: ex1.py
src/pdm4ar/exercises/ex02/: __init__.py  algo.py  structures.py
src/pdm4ar/exercises/ex03/: __init__.py  algo.py  local_queries.py  structures.py
src/pdm4ar/exercises/ex04/: mdp.py  policy_iteration.py  (+2 more)
src/pdm4ar/exercises_def/: __init__.py  structures.py  structures_memory.py  structures_time.py
(+179 files in other folders)
