[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdm4ar"
version = "2024.0.0"
authors = ["IDSC Frazzoli <azanardi@ethz.ch>"]

description = "Exercises for the course Planning and Decision Making for Autonomous Robots at ETH Zurich"
readme = "README.md"
packages = [
    { include = "pdm4ar", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# general 
numpy = "<2.0.0"
networkx = "3.3"
osmnx = "1.9.4"
matplotlib = "3.8.2"
frozendict = "2.4.4"
pyyaml = "6.0.1"
shapely = "2.0.5"
triangle = { git = "https://github.com/ClearCalcs/triangle.git", branch = "master" }

# zuper
zuper-commons-z7 = "7.2"
PyGeometry-z7 = "7.2"
reprep-z7 = "7.2"
pycontracts3 = "7.2"
xtermcolor = "*"
pytz = "*"
aiofiles = "*"
future = "*"
webcolors = "*"
typing_extensions = "*"
decorator = "*"

# dg
dg-commons = { git = "https://github.com/idsc-frazzoli/dg-commons.git", branch = "pdm4ar2024/fix-arm64" }
dg-commonroad-drivability-checker = "2024.1"

# mpc
do-mpc = "4.6.5"

# optimization
scipy = "1.14.0"
pulp = ">=2.7.0"
cvxpy = { version = "1.5.3", extras = ["CVXOPT", "CBC", ] }
# CVXOPT "1.3.2" NOT BUILDING ON ARM64
casadi = "3.6.5"
sympy = "1.13.0"

# notebooks
ipython = "8.26.0"
ipykernel = "6.29.5"

# others
pre-commit = "3.8.0"
#setuptools = "*"
#wheel = "*"


[tool.poetry.scripts]
pdm4ar-exercise = "pdm4ar:exercise_main"
